--- a/package.json
+++ b/package.json
@@ -3,17 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "typegen": "optimizely-cms-typegen",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
+    "@optimizely/cms-sdk": "^0.1.0-alpha.17",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
   "devDependencies": {
+	  "optimizely-cms-typegen": "file:./optimizely-cms-typegen",
+    "@optimizely/cms-cli": "^0.1.0-alpha.11",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
